--- a/baibao/baibao.csproj
+++ b/baibao/baibao.csproj
@@ -88,6 +88,11 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\IPServices\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Service References\MobileServices\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -98,10 +103,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Common\MyIPAddress.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\MobileViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Compile Include="ViewModel\QQViewModel.cs" />
+    <Compile Include="ViewModel\IPViewModel.cs" />
     <Compile Include="Views\Exchange.xaml.cs">
       <DependentUpon>Exchange.xaml</DependentUpon>
     </Compile>
@@ -179,6 +186,7 @@
   <ItemGroup>
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
+    <None Include="Service References\IPServices\IpAddressSearchWebService.wsdl" />
     <None Include="Service References\MobileServices\MobileCodeWS.wsdl" />
     <None Include="Images\1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -230,6 +238,13 @@
     <None Include="Images\Y.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Service References\IPServices\IpAddressSearchWebService.disco" />
+    <None Include="Service References\IPServices\configuration91.svcinfo" />
+    <None Include="Service References\IPServices\configuration.svcinfo" />
+    <None Include="Service References\IPServices\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="ServiceReferences.ClientConfig" />
   </ItemGroup>
   <ItemGroup>
@@ -255,6 +270,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Service References\IPServices\" />
     <WCFMetadataStorage Include="Service References\MobileServices\" />
     <WCFMetadataStorage Include="Service References\QQServices\" />
   </ItemGroup>
