--- a/baibao/baibao.csproj
+++ b/baibao/baibao.csproj
@@ -184,6 +184,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DataSource\city.xml" />
+    <Content Include="DataSource\city_next.xml" />
+    <Content Include="DataSource\province.xml" />
+    <Content Include="DataSource\province2.xml" />
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
     <None Include="Service References\IPServices\IpAddressSearchWebService.wsdl" />
@@ -245,6 +249,113 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <Resource Include="Images\weather\0.gif" />
+    <Resource Include="Images\weather\1.gif" />
+    <Resource Include="Images\weather\10.gif" />
+    <Resource Include="Images\weather\11.gif" />
+    <Resource Include="Images\weather\12.gif" />
+    <Resource Include="Images\weather\13.gif" />
+    <Resource Include="Images\weather\14.gif" />
+    <Resource Include="Images\weather\15.gif" />
+    <Resource Include="Images\weather\16.gif" />
+    <Resource Include="Images\weather\17.gif" />
+    <Resource Include="Images\weather\18.gif" />
+    <Resource Include="Images\weather\19.gif" />
+    <Resource Include="Images\weather\2.gif" />
+    <Resource Include="Images\weather\20.gif" />
+    <Resource Include="Images\weather\21.gif" />
+    <Resource Include="Images\weather\22.gif" />
+    <Resource Include="Images\weather\23.gif" />
+    <Resource Include="Images\weather\24.gif" />
+    <Resource Include="Images\weather\25.gif" />
+    <Resource Include="Images\weather\26.gif" />
+    <Resource Include="Images\weather\27.gif" />
+    <Resource Include="Images\weather\28.gif" />
+    <Resource Include="Images\weather\29.gif" />
+    <Resource Include="Images\weather\3.gif" />
+    <Resource Include="Images\weather\30.gif" />
+    <Resource Include="Images\weather\31.gif" />
+    <Resource Include="Images\weather\4.gif" />
+    <Resource Include="Images\weather\5.gif" />
+    <Resource Include="Images\weather\6.gif" />
+    <Resource Include="Images\weather\7.gif" />
+    <Resource Include="Images\weather\8.gif" />
+    <Resource Include="Images\weather\9.gif" />
+    <Resource Include="Images\weather\a_0.gif" />
+    <Resource Include="Images\weather\a_1.gif" />
+    <Resource Include="Images\weather\a_10.gif" />
+    <Resource Include="Images\weather\a_11.gif" />
+    <Resource Include="Images\weather\a_12.gif" />
+    <Resource Include="Images\weather\a_13.gif" />
+    <Resource Include="Images\weather\a_14.gif" />
+    <Resource Include="Images\weather\a_15.gif" />
+    <Resource Include="Images\weather\a_16.gif" />
+    <Resource Include="Images\weather\a_17.gif" />
+    <Resource Include="Images\weather\a_18.gif" />
+    <Resource Include="Images\weather\a_19.gif" />
+    <Resource Include="Images\weather\a_2.gif" />
+    <Resource Include="Images\weather\a_20.gif" />
+    <Resource Include="Images\weather\a_21.gif" />
+    <Resource Include="Images\weather\a_22.gif" />
+    <Resource Include="Images\weather\a_23.gif" />
+    <Resource Include="Images\weather\a_24.gif" />
+    <Resource Include="Images\weather\a_25.gif" />
+    <Resource Include="Images\weather\a_26.gif" />
+    <Resource Include="Images\weather\a_27.gif" />
+    <Resource Include="Images\weather\a_28.gif" />
+    <Resource Include="Images\weather\a_29.gif" />
+    <Resource Include="Images\weather\a_3.gif" />
+    <Resource Include="Images\weather\a_30.gif" />
+    <Resource Include="Images\weather\a_31.gif" />
+    <Resource Include="Images\weather\a_4.gif" />
+    <Resource Include="Images\weather\a_5.gif" />
+    <Resource Include="Images\weather\a_6.gif" />
+    <Resource Include="Images\weather\a_7.gif" />
+    <Resource Include="Images\weather\a_8.gif" />
+    <Resource Include="Images\weather\a_9.gif" />
+    <Resource Include="Images\weather\a_nothing.gif" />
+    <Resource Include="Images\weather\b_0.gif" />
+    <Resource Include="Images\weather\b_1.gif" />
+    <Resource Include="Images\weather\b_10.gif" />
+    <Resource Include="Images\weather\b_11.gif" />
+    <Resource Include="Images\weather\b_12.gif" />
+    <Resource Include="Images\weather\b_13.gif" />
+    <Resource Include="Images\weather\b_14.gif" />
+    <Resource Include="Images\weather\b_15.gif" />
+    <Resource Include="Images\weather\b_16.gif" />
+    <Resource Include="Images\weather\b_17.gif" />
+    <Resource Include="Images\weather\b_18.gif" />
+    <Resource Include="Images\weather\b_19.gif" />
+    <Resource Include="Images\weather\b_2.gif" />
+    <Resource Include="Images\weather\b_20.gif" />
+    <Resource Include="Images\weather\b_21.gif" />
+    <Resource Include="Images\weather\b_22.gif" />
+    <Resource Include="Images\weather\b_23.gif" />
+    <Resource Include="Images\weather\b_24.gif" />
+    <Resource Include="Images\weather\b_25.gif" />
+    <Resource Include="Images\weather\b_26.gif" />
+    <Resource Include="Images\weather\b_27.gif" />
+    <Resource Include="Images\weather\b_28.gif" />
+    <Resource Include="Images\weather\b_29.gif" />
+    <Resource Include="Images\weather\b_3.gif" />
+    <Resource Include="Images\weather\b_30.gif" />
+    <Resource Include="Images\weather\b_31.gif" />
+    <Resource Include="Images\weather\b_4.gif" />
+    <Resource Include="Images\weather\b_5.gif" />
+    <Resource Include="Images\weather\b_6.gif" />
+    <Resource Include="Images\weather\b_7.gif" />
+    <Resource Include="Images\weather\b_8.gif" />
+    <Resource Include="Images\weather\b_9.gif" />
+    <Resource Include="Images\weather\b_nothing.gif" />
+    <Resource Include="Images\weather\nothing.gif" />
+    <Content Include="Images\weather\Read me.txt" />
+    <Resource Include="Images\weather\r_b.gif" />
+    <Resource Include="Images\weather\r_t1.gif" />
+    <Resource Include="Images\weather\tem1.gif" />
+    <Resource Include="Images\weather\tem2.gif" />
+    <Resource Include="Images\weather\tem3.gif" />
+    <Resource Include="Images\weather\tem4.gif" />
+    <Resource Include="Images\weather\tem5.gif" />
     <Content Include="ServiceReferences.ClientConfig" />
   </ItemGroup>
   <ItemGroup>
