--- a/baibao/baibao.csproj
+++ b/baibao/baibao.csproj
@@ -135,6 +135,9 @@
     <Compile Include="Views\Mobile.xaml.cs">
       <DependentUpon>Mobile.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\PopupCotainer.xaml.cs">
+      <DependentUpon>PopupCotainer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\QQ.xaml.cs">
       <DependentUpon>QQ.xaml</DependentUpon>
     </Compile>
@@ -143,6 +146,9 @@
     </Compile>
     <Compile Include="Views\TV.xaml.cs">
       <DependentUpon>TV.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControl1.xaml.cs">
+      <DependentUpon>UserControl1.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Weather.xaml.cs">
       <DependentUpon>Weather.xaml</DependentUpon>
@@ -176,6 +182,10 @@
       <SubType>Form</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\PopupCotainer.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\QQ.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -185,6 +195,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\TV.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\UserControl1.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
